FIREBIRD_deliver.conf: update for new format

--- a/SciRequest/FIREBIRD_deliver.conf
+++ b/SciRequest/FIREBIRD_deliver.conf
@@ -5,21 +5,24 @@
 # data is synced from the "latest" directories of symlinks
 
 [DEFAULT]
-username = XXXXXXX
-password = XXXXXXX
-remotehost = sftp://XXXXXXXXXXXXXXXXX
+
 
 # Set global variables for this configuration file to use its %(VAR)s
 
-DEST_1 = /firebird-data/MSU_Side/FU_1/SPQ/orginals
-DEST_2 = /firebird-data/MSU_Side/FU_2/SPQ/orginals
-DEST_3 = /firebird-data/MSU_Side/FU_3/SPQ/orginals
-DEST_4 = /firebird-data/MSU_Side/FU_4/SPQ/orginals
+DEST_1 = /firebird-data/MSU_Side/FU_1/SPQ/originals
+DEST_2 = /firebird-data/MSU_Side/FU_2/SPQ/originals
+DEST_3 = /firebird-data/MSU_Side/FU_3/SPQ/originals
+DEST_4 = /firebird-data/MSU_Side/FU_4/SPQ/originals
 
 
 ###############################################################################
 # LEVEL 0 data pull
 #------------------------------------------
+[connection]
+username = XXXX
+password = XXXX
+remotehost = XXXX
+
 [firebird_fu_1]
 destination = %(DEST_1)s/
 
